Fix submit button width on small screens

--- a/views/styles/layout/input.styl
+++ b/views/styles/layout/input.styl
@@ -25,6 +25,7 @@
     padding 15px
     border-radius 30px
     transition all .5s
+    min-width 75px
     
 .submitButton:hover
     background-color #E40520
